--- a/templates/mjml/b2b-template.mjml
+++ b/templates/mjml/b2b-template.mjml
@@ -119,7 +119,7 @@
               below.
             </p>
           </mj-text>
-          <mj-button href="{{action_url}}" css-class="button--black"
+          <mj-button href="{{ action_url }}" css-class="button--black"
             >Yes, Keep Me Updated</mj-button
           >
           <mj-text>
@@ -161,10 +161,10 @@
                 width="20"
             /></a>
           </mj-text>
-          <mj-text font-size="12px" color="#74787e">
+          <mj-text font-size="12px" color="#74787e" align="center">
             {{ company_name }} <br />{{ company_address }}
           </mj-text>
-          <mj-text font-size="12px" color="#74787e">
+          <mj-text font-size="12px" color="#74787e" align="center">
             You are receiving this email because you are a business contact of {{ legal_entity }}.
             This is a one-time request to confirm your marketing preferences.
           </mj-text>
